libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/let-argument-not-path.jsonc
//@ run: fail
//@ description: The binding name must be a path expression.
[
  "::kernel::special_form::let",
  { "#literal": true },
  //~^ ERROR expected a simple identifier for the `let` binding name
  { "#literal": true },
  ["+", { "#literal": true }, { "#literal": true }]
]
